@@ -1,59 +1,60 @@
 package com.webtech.snappad.services;
 
-import java.util.List;
-
 import java.time.LocalDateTime;
-import org.springframework.transaction.annotation.Transactional;
+import java.util.List;
+import java.util.stream.Collectors;
+
 import org.springframework.stereotype.Service;
 
-import com.webtech.snappad.dtos.notebook.NotebookCreateRequestDto;
-import com.webtech.snappad.dtos.notebook.NotebookResponseDto;
-import com.webtech.snappad.dtos.notebook.NotebookSummaryDto;
-import com.webtech.snappad.dtos.notebook.NotebookUpdateRequestDto;
+import com.webtech.snappad.dtos.notebook.*;
 import com.webtech.snappad.entities.Notebook;
 import com.webtech.snappad.entities.User;
-import com.webtech.snappad.mappers.NotebookMapper;
 import com.webtech.snappad.repositories.NotebookRepository;
 
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 
 @Service
 @RequiredArgsConstructor
-@Transactional
 public class NotebookService {
 
     private final NotebookRepository notebookRepository;
 
+    // ✅ CREATE NOTEBOOK
     public NotebookResponseDto createNotebook(
             NotebookCreateRequestDto dto,
             User user
     ) {
-        Notebook notebook = NotebookMapper.fromCreateDto(dto, user);
-        Notebook savedNotebook = notebookRepository.save(notebook);
-        return NotebookMapper.toResponse(savedNotebook);
+        Notebook notebook = new Notebook();
+        notebook.setTitle(dto.getTitle());
+        notebook.setContent(""); // empty by default
+        notebook.setUser(user);
+        notebook.setCreatedAt(LocalDateTime.now());
+        notebook.setUpdatedAt(LocalDateTime.now());
+
+        Notebook saved = notebookRepository.save(notebook);
+        return toResponseDto(saved);
     }
 
-    @Transactional(readOnly = true)
+    // ✅ GET ALL NOTEBOOKS FOR USER
     public List<NotebookSummaryDto> getUserNotebooks(Long userId) {
         return notebookRepository.findByUser_Userid(userId)
                 .stream()
-                .map(NotebookMapper::toSummary)
-                .toList();
+                .map(this::toSummaryDto)
+                .collect(Collectors.toList());
     }
 
-    @Transactional(readOnly = true)
-    public NotebookResponseDto getNotebook(
-            Long notebookId,
-            Long userId
-    ) {
+    // ✅ GET SINGLE NOTEBOOK
+    public NotebookResponseDto getNotebook(Long notebookId, Long userId) {
         Notebook notebook = notebookRepository
                 .findByNotebookIdAndUser_Userid(notebookId, userId)
                 .orElseThrow(() ->
-                        new RuntimeException("Notebook not found"));
+                        new EntityNotFoundException("Notebook not found"));
 
-        return NotebookMapper.toResponse(notebook);
+        return toResponseDto(notebook);
     }
 
+    // ✅ UPDATE NOTEBOOK
     public NotebookResponseDto updateNotebook(
             Long notebookId,
             NotebookUpdateRequestDto dto,
@@ -62,40 +63,59 @@ public class NotebookService {
         Notebook notebook = notebookRepository
                 .findByNotebookIdAndUser_Userid(notebookId, userId)
                 .orElseThrow(() ->
-                        new RuntimeException("Notebook not found"));
+                        new EntityNotFoundException("Notebook not found"));
 
-        NotebookMapper.updateEntity(notebook, dto);
-        Notebook updatedNotebook = notebookRepository.save(notebook);
+        notebook.setTitle(dto.getTitle());
+        notebook.setContent(dto.getContent());
+        notebook.setUpdatedAt(LocalDateTime.now());
 
-        return NotebookMapper.toResponse(updatedNotebook);
+        Notebook updated = notebookRepository.save(notebook);
+        return toResponseDto(updated);
     }
 
-    public void deleteNotebook(
-            Long notebookId,
-            Long userId
-    ) {
+    // ✅ DELETE NOTEBOOK
+    public void deleteNotebook(Long notebookId, Long userId) {
         Notebook notebook = notebookRepository
                 .findByNotebookIdAndUser_Userid(notebookId, userId)
                 .orElseThrow(() ->
-                        new RuntimeException("Notebook not found"));
+                        new EntityNotFoundException("Notebook not found"));
 
         notebookRepository.delete(notebook);
     }
 
-    @Transactional
-    public void autosave(Long userId, Long notebookId, String content) {
+    // ===============================
+    // DTO MAPPERS (VERY IMPORTANT)
+    // ===============================
+
+    private NotebookResponseDto toResponseDto(Notebook notebook) {
+        NotebookResponseDto dto = new NotebookResponseDto();
+        dto.setNotebookId(notebook.getNotebookId());
+        dto.setTitle(notebook.getTitle());
+        dto.setContent(notebook.getContent());
+        dto.setCreatedAt(notebook.getCreatedAt());
+        dto.setUpdatedAt(notebook.getUpdatedAt());
+        return dto;
+    }
+
+    private NotebookSummaryDto toSummaryDto(Notebook notebook) {
+        NotebookSummaryDto dto = new NotebookSummaryDto();
+        dto.setNotebookId(notebook.getNotebookId());
+        dto.setTitle(notebook.getTitle());
+        dto.setUpdatedAt(notebook.getUpdatedAt());
+        return dto;
+    }
+
+    // ✅ AUTOSAVE FROM WEBSOCKET
+    public void autosave(Long notebookId, Long userId, String content) {
 
         Notebook notebook = notebookRepository
                 .findByNotebookIdAndUser_Userid(notebookId, userId)
-                .orElseThrow(() -> new RuntimeException("Notebook not found"));
+                .orElseThrow(() ->
+                        new EntityNotFoundException("Notebook not found"));
 
         notebook.setContent(content);
         notebook.setUpdatedAt(LocalDateTime.now());
 
-        notebookRepository.save(notebook); // 🔴 THIS LINE
+        notebookRepository.save(notebook);
     }
-
-
 }
-
-
